# yt-client

./: .env.example  Cargo.toml  build.rs
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/api/: mod.rs
src/yt/: mod.rs
static/: app.js  index.html
