[package]
name = "yt-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
serde_urlencoded = "0.7"
tide = "0.16"
serde_json = "1.0.85"
http-types = "2.12.0"
uuid = { version = "1.1.2", features = ["v4"] }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.async-std]
version = "1.12"
features = ["attributes"]

[dependencies.surf]
version = "2.3"
default-features = false
features = ["h1-client-rustls", "middleware-logger"]

[build-dependencies]
dotenv = "0.15"
